# minkiPy

./: .gitignore  LICENSE  README.md  minkiPy_CRC_complete_workflow.ipynb  minkiPy_FSHD_complete_workflow.ipynb  minkiPy_env.yaml  minkiPy_exploratory_workflow.ipynb  pyproject.toml
minkiPy/: __init__.py  __main__.py  cli.py  io.py  minkowski_core.py  mpi_driver.py
minkiPy/downstream/: __init__.py  graphs.py  postprocess.py
